feat: workflow 수동실행 추가

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,6 +3,7 @@ name: Check New Blog Post
 on:
   schedule:
     - cron: '0 12 * * *'  # 매일 대한민국 시간으로 아침 9시에 실행 (UTC 기준 오후 12시)
+  workflow_dispatch:
 
 jobs:
   check_blog_post:
