--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         python-version: 3.8
 
@@ -23,4 +23,4 @@ jobs:
         pip install requests beautifulsoup4
 
     - name: Run script
-      run: python path_to_your_script.py
+      run: python main.py
