fix: 액션 발생시 깃허브 이슈 생성하도록

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,11 +22,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests beautifulsoup4
 
-    - name: Run script
-      id: run-script
+    - name: Run script and set output
+      id: run-script  # 이 id는 다음 단계에서 이 단계의 출력에 액세스하기 위해 사용됩니다.
       run: |
         output=$(python main.py | sed ':a;N;$!ba;s/\n/::/g')
         echo "new-posts=${output}" >> $GITHUB_ENV
+        echo "::set-output name=new-posts::${output}"
 
     - name: Create GitHub Issue for new posts
       if: steps.run-script.outputs.new-posts  # 새 게시물이 있을 때만 이 단계를 실행합니다.
@@ -34,7 +35,7 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const links = process.env.new_posts.split('::').join('\n');
+          const links = steps.run-script.outputs.new-posts.split('::').join('\n');
           if (links) {
             const issueTitle = "New Blog Posts Detected!";
             const issueBody = `New posts have been detected:\n\n${links.split('\n').map(link => `- ${link}`).join('\n')}`;
