fix: 액션 발생시 깃허브 이슈 생성하도록

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,7 +34,7 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const links = process.env.NEW_POSTS.split('::').join('\n');
+          const links = process.env.new_posts.split('::').join('\n');
           if (links) {
             const issueTitle = "New Blog Posts Detected!";
             const issueBody = `New posts have been detected:\n\n${links.split('\n').map(link => `- ${link}`).join('\n')}`;
@@ -45,5 +45,6 @@ jobs:
               body: issueBody
             });
           }
+        
     
 
