--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,7 +32,7 @@ jobs:
       if: env.NEW_POSTS != ''
       uses: actions/github-script@v5
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.TECHBLOG_ALARM_ISSUE_ACTION_TOKEN }}
         script: |
           const links = process.env.NEW_POSTS.split('::').join('\n');
           if (links) {
