refactor: 중복코드 삭제, 이름 명확화, 기능별로 코드 분리

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,7 +38,7 @@ jobs:
           const formattedDate = `${currentDate.getFullYear()}.${currentDate.getMonth() + 1}.${currentDate.getDate()}`;
           const DATA = process.env.NEW_POSTS.split('::').join('\n');
           if (DATA) {
-            const issueTitle = `새로운 블로그 게시글이 올라왔습니다! ${formattedDate}`;
+            const issueTitle = `새로운 블로그 게시글이 올라왔습니다! [${formattedDate}]`;
             const issueBody = `## 새로운 블로그 게시글 목록\n\n${DATA.split('\n').map(link => `${link}`).join('\n')}`;
             github.rest.issues.create({
               owner: context.repo.owner,
