--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,7 +53,7 @@ jobs:
           const blogNames = [];
           let issueBody = "";
           if (DATA) {
-            posts.forEach(post => {
+            DATA.forEach(post => {
                 if (!post || post.trim() === '') return;
         
                 const [blogName, postTitle] = post.split("::::");
@@ -72,7 +72,7 @@ jobs:
             github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              title: issueTitle,가
+              title: issueTitle,
               body: issueBody
             });
           }
