--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
@@ -24,7 +24,7 @@ jobs:
 
     - name: Check for new blog posts and update text files
       run: |
-        output=$(python main.py)
+        output=$(python main.py | sed ':a;N;$!ba;s/\n/::/g')
         if [ -z "$output" ]; then
           echo "새로운 게시글이 없습니다."
         else
