--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,41 +23,19 @@ jobs:
         pip install requests beautifulsoup4
 
     - name: Check for new blog posts and update text files
+      id: check_posts
       run: |
         output=$(python main.py | sed ':a;N;$!ba;s/\n/::/g')
         if [ -z "$output" ]; then
           echo "새로운 게시글이 없습니다."
+          echo "POST_DATA=" >> $GITHUB_ENV
         else
-          echo "NEW_POSTS=$output" >> $GITHUB_ENV
+          echo "POST_DATA=$output" >> $GITHUB_ENV
         fi
 
-    - name: Commit and push changes if new posts are found
-      if: env.NEW_POSTS != ''
-      run: |
-        git config --global user.name 'dgh06175'
-        git config --global user.email 'dgh06175@gmail.com'
-        git add pastData/*.txt
-        git commit -m "새로운 블로그 포스트 기록 텍스트 파일 업데이트"
-        git push
-
     - name: Create GitHub Issue for new posts
-      if: env.NEW_POSTS != ''
-      uses: actions/github-script@v6
+      if: env.POST_DATA != ''
+      uses: ./.github/actions/create-blog-post-issue
       with:
-        github-token: ${{ secrets.TECHBLOG_ALARM_ISSUE_ACTION_TOKEN }}
-        script: |
-          const currentDate = new Date();
-          const kstOffset = 9 * 60 * 60 * 1000; // 한국 시간에 맞게 UTC 기준 시간에 9시간 추가 (밀리초 단위)
-          const kstDate = new Date(currentDate.getTime() + kstOffset);
-          const formattedDate = `${kstDate.getFullYear()}.${kstDate.getMonth() + 1}.${kstDate.getDate()}`; // 한국 시간에 맞게 포맷
-          const DATA = process.env.NEW_POSTS.split('::').join('\n');
-          if (DATA) {
-            const issueTitle = `새로운 블로그 게시글이 올라왔습니다! [${formattedDate}]`;
-            const issueBody = `## 새로운 블로그 게시글 목록\n\n${DATA.split('\n').map(link => `${link}`).join('\n')}`;
-            github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: issueTitle,
-              body: issueBody
-            });
-          }
+        GITHUB_TOKEN: ${{ secrets.TECHBLOG_ALARM_ISSUE_ACTION_TOKEN }}
+        POST_DATA: ${{ env.POST_DATA }}
