--- a/.github/actions/create-blog-post-issue/action.yaml
+++ b/.github/actions/create-blog-post-issue/action.yaml
@@ -1,8 +1,9 @@
 name: 'Create Blog Post Issue'
 description: 'Creates an issue in GitHub for new blog posts.'
 runs:
-  using: 'node16'
+  using: 'node20'
   main: 'create-issue.js'
+  pre: 'npm install'
 inputs:
   GITHUB_TOKEN:
     description: 'GitHub token for authentication.'
