--- a/.github/actions/create-blog-post-issue/action.yaml
+++ b/.github/actions/create-blog-post-issue/action.yaml
@@ -2,6 +2,7 @@ name: 'Create Blog Post Issue'
 description: 'Creates an issue in GitHub for new blog posts.'
 runs:
   using: 'node20'
+  pre: 'npm install'
   main: 'create-issue.js'
 inputs:
   GITHUB_TOKEN:
