액션 워크플로우에  - name: Install Node.js dependencies 단계 추가

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,6 +27,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests beautifulsoup4
 
+    - name: Install Node.js dependencies
+      run: |
+        cd ./.github/actions/create-blog-post-issue
+        npm install
+
     - name: Check for new blog posts and update text files
       id: check_posts
       run: |
