--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,9 +27,7 @@ jobs:
                 
     - name: Install python dependencies
       run: |
-        python -m pip install --upgrade pip virtualenv
-        python -m virtualenv venv
-        source venv/bin/activate
+        python -m pip install --upgrade pip
         pip install requests beautifulsoup4
 
     - name: Install Node.js dependencies
