fix: 링크 파일에 저장시 파일 존재 하지 않으면 만들게 수정, 리눅스 명령어 간단하게 수정

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,7 +38,7 @@ jobs:
     - name: Check for new blog posts and update text files
       id: check_posts
       run: |
-        output=$(python scrapper/main.py | sed ':a;N;$!ba;s/\n/::/g')
+        output=$(python scrapper/main.py)
         if [ -z "$output" ]; then
           echo "새로운 게시글이 없습니다."
           echo "POST_DATA=" >> $GITHUB_ENV
