--- a/.github/workflows/main_test.yaml
+++ b/.github/workflows/main_test.yaml
@@ -22,10 +22,30 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
+      - name: Install Maven
+        run: |
+          wget https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz
+          tar -xvf apache-maven-3.9.6-bin.tar.gz
+          mv apache-maven-3.9.6 /opt/
+          echo "/opt/apache-maven-3.9.6/bin" >> $GITHUB_PATH
+
+
+      - name: Build with Maven
+        run: |
+          echo $PATH
+          mvn --batch-mode --update-snapshots verify
+
+
       - name: Install Node.js dependencies
         run: |
           cd ./.github/actions/create-blog-post-issue-test
           npm install
+
+      - name: Install tree
+        run: sudo apt-get update && sudo apt-get install tree
+
+      - name: Run tree to display structure
+        run: tree
 
       - name: Check for new blog posts and update text files
         id: check_posts
