--- a/.github/workflows/main_test.yaml
+++ b/.github/workflows/main_test.yaml
@@ -29,29 +29,30 @@ jobs:
           mv apache-maven-3.9.6 /opt/
           echo "/opt/apache-maven-3.9.6/bin" >> $GITHUB_PATH
 
-
-      - name: Build with Maven
-        run: |
-          echo $PATH
-          mvn --batch-mode --update-snapshots verify
-
-
       - name: Install Node.js dependencies
         run: |
           cd ./.github/actions/create-blog-post-issue-test
           npm install
 
-      - name: Install tree
-        run: sudo apt-get update && sudo apt-get install tree
-
-      - name: Run tree to display structure
-        run: tree
+      #      - name: Install tree
+      #        run: sudo apt-get update && sudo apt-get install tree
+      #
+      #      - name: Run tree to display structure
+      #        run: tree
+      
+      - name: Build with Maven
+        run: |
+          echo $PATH
+          mvn --batch-mode --update-snapshots verify
 
       - name: Check for new blog posts and update text files
         id: check_posts
         run: |
-          javac src/main/java/org/example/Main.java
-          output=$(java -cp src/main/java org.example.Main)
+          mvn package
+          output=$(java -jar target/teckblog-alarm-1.0-SNAPSHOT.jar)
+          cd database
+          cat Kakao_new.json
+          echo "$output"
           if [ -z "$output" ]; then
             echo "새로운 게시글이 없습니다."
             echo "POST_DATA=" >> $GITHUB_ENV
